// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CpsRecommendations should not render when cpsRecommendations toggle is disabled 1`] = `<div />`;

exports[`CpsRecommendations should not render when the hasStoryRecommendations flag is disabled for the service 1`] = `<div />`;

exports[`CpsRecommendations should render for a single recommendation item 1`] = `
<div>
  <div
    class="WsojWrapper-sc-1p91yk0-3 bybDJb"
  >
    <section
      aria-labelledby="recommendations-heading"
      class="Wrapper-opyob2-0 dlivvF"
      data-e2e="related-content"
      role="region"
    >
      <div
        class="SectionLabelWrapper-sc-1p91yk0-2 keYZPs"
      >
        <strong
          class="CustomSectionLabel-sc-1p91yk0-1 dbbYpP"
          dir="ltr"
          id="recommendations-heading"
        >
          Recommendations
        </strong>
      </div>
      <div
        class="SingleContentWrapper-opyob2-3 iddZTf"
      >
        <div
          class="GridComponent-nf79gm-0 elxESl"
          dir="ltr"
        >
          <div
            class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys StoryPromoWrapper-sc-1p91yk0-0 gsqqaw"
          >
            <div
              class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
              dir="ltr"
            >
              <div
                class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
              >
                <img
                  alt="Image Alt text"
                  class="StyledImg-sc-7vx2mr-0 hIxkbt"
                  src="http://c.files.bbci.co.uk/256/727445.jpg"
                />
              </div>
            </div>
            <div
              class="TextGridItem-sc-1lkbq5i-0 jJWtYv"
              dir="ltr"
            >
              <span
                class="Headline-sc-1dvfmi3-3 dnWhDh"
              >
                <a
                  class="Link-sc-1dvfmi3-5 jeUMCT"
                  href="/mundo/5331"
                >
                  This is a headline
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`CpsRecommendations should render for multiple recommendation items 1`] = `
<div>
  <div
    class="WsojWrapper-sc-1p91yk0-3 bybDJb"
  >
    <section
      aria-labelledby="recommendations-heading"
      class="Wrapper-opyob2-0 dlivvF"
      data-e2e="related-content"
      role="region"
    >
      <div
        class="SectionLabelWrapper-sc-1p91yk0-2 keYZPs"
      >
        <strong
          class="CustomSectionLabel-sc-1p91yk0-1 dbbYpP"
          dir="ltr"
          id="recommendations-heading"
        >
          Recommendations
        </strong>
      </div>
      <ul
        class="StoryPromoUl-sc-171lqjd-1 isCYWc GridComponent-nf79gm-0 buIDdq"
        dir="ltr"
        role="list"
      >
        <li
          class="StoryPromoLi-sc-171lqjd-0 StyledStoryPromoLi-sc-1p91yk0-4 qcOBK GridComponent-nf79gm-0 cjfxRv"
          dir="ltr"
          role="listitem"
        >
          <div
            class="GridComponent-nf79gm-0 eRYAGr"
            dir="ltr"
          >
            <div
              class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys StoryPromoWrapper-sc-1p91yk0-0 gsqqaw"
            >
              <div
                class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
                dir="ltr"
              >
                <div
                  class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
                >
                  <img
                    alt="Image Alt text"
                    class="StyledImg-sc-7vx2mr-0 hIxkbt"
                    src="http://c.files.bbci.co.uk/5A4D/production/_111371132_hi060727445.jpg"
                  />
                </div>
              </div>
              <div
                class="TextGridItem-sc-1lkbq5i-0 jJWtYv"
                dir="ltr"
              >
                <span
                  class="Headline-sc-1dvfmi3-3 dnWhDh"
                >
                  <a
                    class="Link-sc-1dvfmi3-5 jeUMCT"
                    href="/mundo/noticias-america-latina-51975331"
                  >
                    Argentina ordena cuarentena total obligatoria por el coronavirus
                  </a>
                </span>
              </div>
            </div>
          </div>
        </li>
        <li
          class="StoryPromoLi-sc-171lqjd-0 StyledStoryPromoLi-sc-1p91yk0-4 qcOBK GridComponent-nf79gm-0 cjfxRv"
          dir="ltr"
          role="listitem"
        >
          <div
            class="GridComponent-nf79gm-0 eRYAGr"
            dir="ltr"
          >
            <div
              class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys StoryPromoWrapper-sc-1p91yk0-0 gsqqaw"
            >
              <div
                class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
                dir="ltr"
              >
                <div
                  class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
                >
                  <img
                    alt="Image Alt text"
                    class="StyledImg-sc-7vx2mr-0 hIxkbt"
                    src="http://c.files.bbci.co.uk/49F7/production/_111753981_03009521-c6ba-41e6-8328-65d0caf07635.jpg"
                  />
                </div>
              </div>
              <div
                class="TextGridItem-sc-1lkbq5i-0 jJWtYv"
                dir="ltr"
              >
                <span
                  class="Headline-sc-1dvfmi3-3 dnWhDh"
                >
                  <a
                    class="Link-sc-1dvfmi3-5 jeUMCT"
                    href="/mundo/noticias-america-latina-52250630"
                  >
                    Por qué México se convirtió en el gran obstáculo del plan de la OPEP para aumentar el precio del petróleo
                  </a>
                </span>
              </div>
            </div>
          </div>
        </li>
        <li
          class="StoryPromoLi-sc-171lqjd-0 StyledStoryPromoLi-sc-1p91yk0-4 qcOBK GridComponent-nf79gm-0 cjfxRv"
          dir="ltr"
          role="listitem"
        >
          <div
            class="GridComponent-nf79gm-0 eRYAGr"
            dir="ltr"
          >
            <div
              class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys StoryPromoWrapper-sc-1p91yk0-0 gsqqaw"
            >
              <div
                class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
                dir="ltr"
              >
                <div
                  class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
                >
                  <img
                    alt="Image Alt text"
                    class="StyledImg-sc-7vx2mr-0 hIxkbt"
                    src="http://c.files.bbci.co.uk/34F5/production/_111775531_tv061050412.jpg"
                  />
                </div>
              </div>
              <div
                class="TextGridItem-sc-1lkbq5i-0 jJWtYv"
                dir="ltr"
              >
                <span
                  class="Headline-sc-1dvfmi3-3 dnWhDh"
                >
                  <a
                    class="Link-sc-1dvfmi3-5 jeUMCT"
                    href="/mundo/noticias-52275464"
                  >
                    El inédito y cuestionado plan de emergencia económica de Ecuador contra la crisis del coronavirus
                  </a>
                </span>
              </div>
            </div>
          </div>
        </li>
        <li
          class="StoryPromoLi-sc-171lqjd-0 StyledStoryPromoLi-sc-1p91yk0-4 qcOBK GridComponent-nf79gm-0 cjfxRv"
          dir="ltr"
          role="listitem"
        >
          <div
            class="GridComponent-nf79gm-0 eRYAGr"
            dir="ltr"
          >
            <div
              class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys StoryPromoWrapper-sc-1p91yk0-0 gsqqaw"
            >
              <div
                class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
                dir="ltr"
              >
                <div
                  class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
                >
                  <img
                    alt="Image Alt text"
                    class="StyledImg-sc-7vx2mr-0 hIxkbt"
                    src="http://c.files.bbci.co.uk/4627/production/_111195971_mediaitem111195968.jpg"
                  />
                </div>
              </div>
              <div
                class="TextGridItem-sc-1lkbq5i-0 jJWtYv"
                dir="ltr"
              >
                <span
                  class="Headline-sc-1dvfmi3-3 dnWhDh"
                >
                  <a
                    class="Link-sc-1dvfmi3-5 jeUMCT"
                    href="/mundo/noticias-51796524"
                  >
                    La guerra de precios entre Arabia Saudita y Rusia que hundió el valor del petróleo y las bolsas en medio de la crisis por el coronavirus
                  </a>
                </span>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </section>
  </div>
</div>
`;
